--- a/sec-solutions.html
+++ b/sec-solutions.html
@@ -19,6 +19,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0">
 <link href="_static/pretext/css/theme.css" rel="stylesheet" type="text/css">
+<link href="_static/pretext/css/ol-markers.css" rel="stylesheet" type="text/css">
 <script>
 var runestoneMathReady = new Promise((resolve) => window.rsMathReady = resolve);
 window.MathJax = {
@@ -158,7 +159,10 @@ eBookConfig.enable_chatcodes =  false;
 <li class="toc-item toc-chapter contains-active">
 <div class="toc-title-box"><a href="ch-linear-equations.html" class="internal"><span class="codenumber">1</span> <span class="title">Systems of linear equations</span></a></div>
 <ul class="structural toc-item-list contains-active">
-<li class="toc-item toc-section active"><div class="toc-title-box"><a href="sec-solutions.html" class="internal"><span class="codenumber">1.1</span> <span class="title">Solutions to systems of linear equations</span></a></div></li>
+<li class="toc-item toc-section contains-active">
+<div class="toc-title-box"><a href="sec-solutions.html" class="internal"><span class="codenumber">1.1</span> <span class="title">Solutions to systems of linear equations</span></a></div>
+<ul class="structural toc-item-list active"><li class="toc-item toc-exercises"><div class="toc-title-box"><a href="sec-solutions.html#exercises-ch1-sec1" class="internal"><span class="codenumber">1.1</span> <span class="title">Exercises</span></a></div></li></ul>
+</li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-echelon.html" class="internal"><span class="codenumber">1.2</span> <span class="title">The reduced echelon form of a linear system</span></a></div></li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-gauss.html" class="internal"><span class="codenumber">1.3</span> <span class="title">Gauss--Jordan elimination</span></a></div></li>
 </ul>
@@ -650,7 +654,169 @@ x=t,\quad y=s,\quad z=-1-s,\quad w=-t\qquad (s,t\in\R)\text{.}
 </div>
 <div class="autopermalink" data-description="Paragraph"><a href="#sec-solutions-30-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
 </div>
-<div class="autopermalink" data-description="Remark 1.1.21"><a href="#sec-solutions-30" title="Copy heading and permalink for Remark 1.1.21" aria-label="Copy heading and permalink for Remark 1.1.21">🔗</a></div></article><div class="autopermalink" data-description="Section 1.1: Solutions to systems of linear equations"><a href="#sec-solutions" title="Copy heading and permalink for Section 1.1: Solutions to systems of linear equations" aria-label="Copy heading and permalink for Section 1.1: Solutions to systems of linear equations">🔗</a></div></section></div>
+<div class="autopermalink" data-description="Remark 1.1.21"><a href="#sec-solutions-30" title="Copy heading and permalink for Remark 1.1.21" aria-label="Copy heading and permalink for Remark 1.1.21">🔗</a></div></article><section class="exercises" id="exercises-ch1-sec1"><h3 class="heading hide-type">
+<span class="type">Exercises</span><span class="space heading-divison-mark heading-divison-mark__space"> </span><span class="codenumber"></span><span class="space heading-divison-mark heading-divison-mark__space"> </span><span class="title">Exercises</span>
+</h3>
+<article class="exercise exercise-like" id="exercises-ch1-sec1-1"><h4 class="heading"><span class="codenumber">1<span class="period heading-divison-mark heading-divison-mark__period">.</span></span></h4>
+<div class="para" id="exercises-ch1-sec1-1-1-1">Determine which of the following are systems of linear equations. Explain why.<div class="autopermalink" data-description="Paragraph"><a href="#exercises-ch1-sec1-1-1-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div> <ol class="lower-alpha ol-marker-1" id="exercises-ch1-sec1-1-1-2">
+<li id="exercises-ch1-sec1-1-1-2-1">
+<div class="para logical" id="exercises-ch1-sec1-1-1-2-1-1">
+<div class="displaymath process-math" id="exercises-ch1-sec1-1-1-2-1-1-1">
+\begin{equation*}
+3x+2y=1
+\end{equation*}
+</div>
+<div class="autopermalink" data-description="Paragraph"><a href="#exercises-ch1-sec1-1-1-2-1-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="autopermalink" data-description="Item 1.1.1.a"><a href="#exercises-ch1-sec1-1-1-2-1" title="Copy heading and permalink for Item 1.1.1.a" aria-label="Copy heading and permalink for Item 1.1.1.a">🔗</a></div>
+</li>
+<li id="exercises-ch1-sec1-1-1-2-2">
+<div class="para logical" id="exercises-ch1-sec1-1-1-2-2-1">
+<div class="displaymath process-math" id="exercises-ch1-sec1-1-1-2-2-1-1">
+\begin{equation*}
+\left\{
+\begin{alignedat}{5}
+x \aa + \aa w \amp = \aa 0 \\
+2y^2\aa -\aa x \amp =  \aa 1
+\end{alignedat}
+\right.
+\end{equation*}
+</div>
+<div class="autopermalink" data-description="Paragraph"><a href="#exercises-ch1-sec1-1-1-2-2-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="autopermalink" data-description="Item 1.1.1.b"><a href="#exercises-ch1-sec1-1-1-2-2" title="Copy heading and permalink for Item 1.1.1.b" aria-label="Copy heading and permalink for Item 1.1.1.b">🔗</a></div>
+</li>
+<li id="exercises-ch1-sec1-1-1-2-3">
+<div class="para logical" id="exercises-ch1-sec1-1-1-2-3-1">
+<div class="displaymath process-math" id="exercises-ch1-sec1-1-1-2-3-1-1">
+\begin{equation*}
+\left\{
+\begin{alignedat}{5}
+x \aa + \aa w \amp = \aa 0 \\
+\pi^2y\aa -\aa x \amp =  \aa 1
+\end{alignedat}
+\right.
+\end{equation*}
+</div>
+<div class="autopermalink" data-description="Paragraph"><a href="#exercises-ch1-sec1-1-1-2-3-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="autopermalink" data-description="Item 1.1.1.c"><a href="#exercises-ch1-sec1-1-1-2-3" title="Copy heading and permalink for Item 1.1.1.c" aria-label="Copy heading and permalink for Item 1.1.1.c">🔗</a></div>
+</li>
+<li id="exercises-ch1-sec1-1-1-2-4">
+<div class="para logical" id="exercises-ch1-sec1-1-1-2-4-1">
+<div class="displaymath process-math" id="exercises-ch1-sec1-1-1-2-4-1-1">
+\begin{equation*}
+\left\{
+\begin{alignedat}{7}
+\aa \aa x \aa + \aa w \amp = \aa 0 \\
+3\sqrt{y}\aa -\aa 3\sqrt{y} \aa - \aa x \amp =  \aa 1
+\end{alignedat}
+\right.
+\end{equation*}
+</div>
+<div class="autopermalink" data-description="Paragraph"><a href="#exercises-ch1-sec1-1-1-2-4-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="autopermalink" data-description="Item 1.1.1.d"><a href="#exercises-ch1-sec1-1-1-2-4" title="Copy heading and permalink for Item 1.1.1.d" aria-label="Copy heading and permalink for Item 1.1.1.d">🔗</a></div>
+</li>
+</ol>
+<div class="autopermalink" data-description="Exercise 1.1.1"><a href="#exercises-ch1-sec1-1" title="Copy heading and permalink for Exercise 1.1.1" aria-label="Copy heading and permalink for Exercise 1.1.1">🔗</a></div></article><article class="exercise exercise-like" id="exercises-ch1-sec1-2"><h4 class="heading"><span class="codenumber">2<span class="period heading-divison-mark heading-divison-mark__period">.</span></span></h4>
+<div class="para" id="exercises-ch1-sec1-2-1-1">Give an example of a homogeneous system of linear equations with two equations and two variables. Give an example of an inhomogeneous system of linear equations with two equations and two variables.<div class="autopermalink" data-description="Paragraph"><a href="#exercises-ch1-sec1-2-1-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="autopermalink" data-description="Exercise 1.1.2"><a href="#exercises-ch1-sec1-2" title="Copy heading and permalink for Exercise 1.1.2" aria-label="Copy heading and permalink for Exercise 1.1.2">🔗</a></div></article><article class="exercise exercise-like" id="exercises-ch1-sec1-3"><h4 class="heading"><span class="codenumber">3<span class="period heading-divison-mark heading-divison-mark__period">.</span></span></h4>
+<div class="para logical" id="exercises-ch1-sec1-3-1-1">
+<div class="para">Are the linear systems</div>
+<div class="displaymath process-math" id="exercises-ch1-sec1-3-1-1-1">
+\begin{equation*}
+\left\{
+\begin{alignedat}{5}
+2x \aa + \aa y \amp = \aa 3 \\
+\aa \aa y \amp =  \aa 1
+\end{alignedat}
+\right.\qquad\text{and}\qquad
+\left\{
+\begin{alignedat}{5}
+x \aa + \aa y \amp = \aa 2 \\
+\aa \aa x \amp =  \aa 1
+\end{alignedat}
+\right.
+\end{equation*}
+</div>
+<div class="para">equivalent? Why?</div>
+<div class="autopermalink" data-description="Paragraph"><a href="#exercises-ch1-sec1-3-1-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="autopermalink" data-description="Exercise 1.1.3"><a href="#exercises-ch1-sec1-3" title="Copy heading and permalink for Exercise 1.1.3" aria-label="Copy heading and permalink for Exercise 1.1.3">🔗</a></div></article><article class="exercise exercise-like" id="exercises-ch1-sec1-4"><h4 class="heading"><span class="codenumber">4<span class="period heading-divison-mark heading-divison-mark__period">.</span></span></h4>
+<div class="para" id="exercises-ch1-sec1-4-1-1">Give an example of a pair of linear systems with two equations and two variables that are not equivalent.<div class="autopermalink" data-description="Paragraph"><a href="#exercises-ch1-sec1-4-1-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="autopermalink" data-description="Exercise 1.1.4"><a href="#exercises-ch1-sec1-4" title="Copy heading and permalink for Exercise 1.1.4" aria-label="Copy heading and permalink for Exercise 1.1.4">🔗</a></div></article><article class="exercise exercise-like" id="exercises-ch1-sec1-5"><h4 class="heading"><span class="codenumber">5<span class="period heading-divison-mark heading-divison-mark__period">.</span></span></h4>
+<div class="para" id="exercises-ch1-sec1-5-1-1">Find the number of solutions to each of the linear systems below.<div class="autopermalink" data-description="Paragraph"><a href="#exercises-ch1-sec1-5-1-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div> <ol class="lower-alpha ol-marker-1" id="exercises-ch1-sec1-5-1-2">
+<li id="exercises-ch1-sec1-5-1-2-1">
+<div class="para logical" id="exercises-ch1-sec1-5-1-2-1-1">
+<div class="displaymath process-math" id="exercises-ch1-sec1-5-1-2-1-1-1">
+\begin{equation*}
+\left\{
+\begin{alignedat}{5}
+3x \aa + \aa y \amp = \aa 2 \\
+5x\aa -\aa 2y \amp =  \aa 3
+\end{alignedat}
+\right.
+\end{equation*}
+</div>
+<div class="autopermalink" data-description="Paragraph"><a href="#exercises-ch1-sec1-5-1-2-1-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="autopermalink" data-description="Item 1.1.5.a"><a href="#exercises-ch1-sec1-5-1-2-1" title="Copy heading and permalink for Item 1.1.5.a" aria-label="Copy heading and permalink for Item 1.1.5.a">🔗</a></div>
+</li>
+<li id="exercises-ch1-sec1-5-1-2-2">
+<div class="para logical" id="exercises-ch1-sec1-5-1-2-2-1">
+<div class="displaymath process-math" id="exercises-ch1-sec1-5-1-2-2-1-1">
+\begin{equation*}
+\left\{
+\begin{alignedat}{6}
+3x \aa + \aa y \amp = \aa \aa 8723648 \\
+5x\aa -\aa 2y \amp =  \aa -\aa 2147986
+\end{alignedat}
+\right.
+\end{equation*}
+</div>
+<div class="autopermalink" data-description="Paragraph"><a href="#exercises-ch1-sec1-5-1-2-2-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="autopermalink" data-description="Item 1.1.5.b"><a href="#exercises-ch1-sec1-5-1-2-2" title="Copy heading and permalink for Item 1.1.5.b" aria-label="Copy heading and permalink for Item 1.1.5.b">🔗</a></div>
+</li>
+<li id="exercises-ch1-sec1-5-1-2-3">
+<div class="para logical" id="exercises-ch1-sec1-5-1-2-3-1">
+<div class="displaymath process-math" id="exercises-ch1-sec1-5-1-2-3-1-1">
+\begin{equation*}
+\left\{
+\begin{alignedat}{5}
+x \aa - \aa y \amp =  \aa 1 \\
+2x\aa -\aa 2y \amp =   \aa 2
+\end{alignedat}
+\right.
+\end{equation*}
+</div>
+<div class="autopermalink" data-description="Paragraph"><a href="#exercises-ch1-sec1-5-1-2-3-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="autopermalink" data-description="Item 1.1.5.c"><a href="#exercises-ch1-sec1-5-1-2-3" title="Copy heading and permalink for Item 1.1.5.c" aria-label="Copy heading and permalink for Item 1.1.5.c">🔗</a></div>
+</li>
+<li id="exercises-ch1-sec1-5-1-2-4">
+<div class="para logical" id="exercises-ch1-sec1-5-1-2-4-1">
+<div class="displaymath process-math" id="exercises-ch1-sec1-5-1-2-4-1-1">
+\begin{equation*}
+\left\{
+\begin{alignedat}{5}
+x \aa - \aa y \amp = \aa  1 \\
+2x\aa -\aa 2y \amp =  \aa 0
+\end{alignedat}
+\right.
+\end{equation*}
+</div>
+<div class="autopermalink" data-description="Paragraph"><a href="#exercises-ch1-sec1-5-1-2-4-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="autopermalink" data-description="Item 1.1.5.d"><a href="#exercises-ch1-sec1-5-1-2-4" title="Copy heading and permalink for Item 1.1.5.d" aria-label="Copy heading and permalink for Item 1.1.5.d">🔗</a></div>
+</li>
+</ol>
+<div class="autopermalink" data-description="Exercise 1.1.5"><a href="#exercises-ch1-sec1-5" title="Copy heading and permalink for Exercise 1.1.5" aria-label="Copy heading and permalink for Exercise 1.1.5">🔗</a></div></article><div class="autopermalink" data-description="Exercises 1.1"><a href="#exercises-ch1-sec1" title="Copy heading and permalink for Exercises 1.1" aria-label="Copy heading and permalink for Exercises 1.1">🔗</a></div></section><div class="autopermalink" data-description="Section 1.1: Solutions to systems of linear equations"><a href="#sec-solutions" title="Copy heading and permalink for Section 1.1: Solutions to systems of linear equations" aria-label="Copy heading and permalink for Section 1.1: Solutions to systems of linear equations">🔗</a></div></section></div>
 <div id="ptx-content-footer" class="ptx-content-footer">
 <a class="previous-button button" href="ch-linear-equations.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="sec-echelon.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
 </div></main>
